--- a/client/src/components/views/Navbar/Navbar.module.scss
+++ b/client/src/components/views/Navbar/Navbar.module.scss
@@ -3,6 +3,7 @@
     top: 0;
     overflow: hidden;
     background-color: white;
+    background-color: aqua;
   img {
     width: 100px;
     height: 100px;
