--- a/client/src/App.module.scss
+++ b/client/src/App.module.scss
@@ -1,7 +1,7 @@
-.mainDiv{
-    max-width: 1800px;
+.mainDiv {
+    max-width: 2048px;
     margin: 0 auto;
     padding: 0 16px;
-    background-color: rgb(107, 107, 107);
-    padding: 0;
-}
+    background-color: #1C1C1C;
+    color: #E5D3B3;
+  }
